--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Pantry App",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "build": "npm install",
+    "start": "node index.js",
+    "build": "npm install && npm run migrate && npm run seed && cd client && npm install && npm run build",
     "migrate": "npx knex migrate:latest",
     "seed": "npx knex seed:run"
   },
