--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server/index.js",
     "build": "npm install && npm run migrate && cd client && npm install && npm run build",
     "migrate": "npx knex migrate:latest",
-    "seed": "npx knex seed:run"
+    "seed": "npx knex seed:run",
+    "dev": "nodemon ./server/index.js localhost 3000"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,10 @@
     "firebase": "^9.15.0",
     "knex": "^2.3.0",
     "path": "^0.12.7",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "run": "^1.4.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.21"
   }
 }
